[FIX] sap.uxap.ObjectPageSubSection: fix wrapping titles
Problem: Titles of ObjectPageSubSections has always provide wrapping by
default. However, when layout changes on ObjectPageSections/SubSections
were implemented, this wrapping behavior was lost and now Titles wrap,
but they are not visible (get cut) becuase of the fixed height of the
OverflowToolbar in the header of the SubSections.

Solution: Adjust the height of the OverflowToolbar to auto, so that it
will expand in height if needed (title wraps).
Additionally:
- some redundant CSS styles are cleaned
(sapUxAPObjectPageSubSectionHeaderTitle does not exists any more)
- wrapping property of ObjectPageSection was not updated correctly
  (QUnit added)

SNOW: DINC0667656

--- a/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageSection.less
+++ b/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageSection.less
@@ -157,7 +157,3 @@ html[data-sap-ui-browser^="ie"].sap-desktop {
 	height: auto;
 	padding-bottom: 0;
 }
-
-.sapUxAPObjectPageSection.sapUxAPObjectPageSectionWrapTitle .sapUxAPObjectPageSubSectionHeaderToolbar {
-	height: auto;
-}
