--- a/src/themelib_sap_belize/src/sap/uxap/themes/sap_belize_base/ObjectPageSubSection.less
+++ b/src/themelib_sap_belize/src/sap/uxap/themes/sap_belize_base/ObjectPageSubSection.less
@@ -52,16 +52,6 @@ html .sapUiContainer-Narrow .sapUxAPObjectPageSubSectionHeader {
 	padding: 0 1rem;
 }
 
-.sapUxAPObjectPageLayout-Std-Phone .sapUxAPObjectPageSubSectionHeaderTitle,
-html .sapUiContainer-Narrow .sapUxAPObjectPageSubSectionHeaderTitle {
-	height: auto;
-	overflow: auto;
-	float: none;
-	white-space: normal;
-	word-wrap: break-word;
-	word-break: break-all;
-}
-
 /* tablet display */
 
 .sapUxAPObjectPageLayout-Std-Tablet .sapUxAPObjectPageSubSectionHeader,
@@ -93,13 +83,6 @@ Doing so will result in less generated CSS, as well as less future maintanance i
 		box-sizing: border-box;
 		display: inline-block;
 		margin-left: 0;
-	}
-
-	.sapUxAPObjectPageSubSectionHeader.titleOnLeftLayout .sapUxAPObjectPageSubSectionHeaderTitle {
-		height: auto;
-		white-space: normal;
-		word-wrap: break-word;
-		line-height: normal;
 	}
 
 	.sapUxAPObjectPageSubSectionHeader.titleOnLeftLayout .sapUxAPObjectPageSubSectionHeaderActions {
@@ -193,10 +176,6 @@ Doing so will result in less generated CSS, as well as less future maintanance i
 
 /* compact size */
 .sapUiSizeCompact {
-	.sapUxAPObjectPageSubSectionHeaderTitle {
-		height: 2rem;
-		line-height: 2rem;
-	}
 	.sapUxAPObjectPageLayout-Std-Phone .sapUxAPBlockContainer .sapUiFormResGrid > div,
 	.sapUxAPObjectPageLayout-Std-Phone .sapUxAPBlockContainer .sapUiFormCLContainer {
 		padding: 1rem 0;
@@ -227,5 +206,11 @@ html[data-sap-ui-browser^="ie"].sap-desktop {
 		border: 0.0625rem dashed @sapUiContentFocusColor;
 		pointer-events: none;
 	}
+}
+
+// Styles needed for wrapping title
+.sapUxAPObjectPageSubSection .sapUxAPObjectPageSubSectionHeader .sapUxAPObjectPageSubSectionTitle  {
+	height: auto;
+	line-height: normal;
 }
 
