--- a/src/themelib_sap_bluecrystal/src/sap/uxap/themes/sap_bluecrystal/ObjectPageSubSection.less
+++ b/src/themelib_sap_bluecrystal/src/sap/uxap/themes/sap_bluecrystal/ObjectPageSubSection.less
@@ -15,7 +15,7 @@
 	text-transform: uppercase;
 }
 
-.sapUxAPObjectPageSubSectionFocusable:focus, .sapUxAPObjectPageSubSectionHeaderTitle:focus {
+.sapUxAPObjectPageSubSectionFocusable:focus {
 	outline: 1px dotted @sapUiContentFocusColor;
 	outline-offset: -1px;
 }
